# inkling

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md
api/: pyproject.toml
api/app/: deps.py  main.py
api/app/core/: config.py  database.py
api/app/models/: __init__.py  _types.py  daily_spend.py  inference.py  research_optin.py  round_event.py  self_report.py  session.py  share_card.py
api/app/routers/: content.py  overreach.py  reveal.py  reveal_content.py  round_complete.py  round_events.py  sessions.py
api/app/schemas/: reveal.py  round.py  self_report.py  session.py
api/app/services/: content.py  cost_cap.py  events.py  orchestrator.py  overreach.py  rate_limit.py  reveal.py  reveal_events.py  scoring.py  sessions.py  share_cards.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial.py  0002_phase3_reveal.py
api/tests/: conftest.py  test_overreach.py  test_round_complete.py  test_round_events.py  test_sessions.py
content/ads/: templates.json
content/recruiter/: templates.json
content/reveal/: dismantle.json  forbidden_lexicon.json
content/rounds/: manifest.json
content/rounds/choice/: gambles.json
content/rounds/dilemma/: dilemmas.json
content/rounds/memory/: config.json
content/rounds/pursuit/: trials.json
content/rounds/read/: scenarios.json
content/rounds/trust/: npcs.json
content/scams/: templates.json
content/self_report/: items.json
docs/: consent.md  inferences.md  lexicon.md  phase-2-content-review.md  reveal-sequence.md
engine/: pyproject.toml
engine/src/engine/: __init__.py
engine/src/inkling_engine/: __init__.py  models.py
engine/src/inkling_engine/llm/: __init__.py  lexicon_filter.py  overreach.py  prompts.py
engine/src/inkling_engine/reveal/: __init__.py  pricing.py  stated_vs_revealed.py  targeting.py
engine/src/inkling_engine/rules/: __init__.py  choice.py  dilemma.py  memory.py  pursuit.py  read.py  shared.py  trust.py
engine/src/inkling_engine/scoring/: runner.py
engine/tests/: test_choice.py  test_dilemma.py  test_memory.py  test_overreach.py  test_pricing.py  test_pursuit.py  test_read.py  test_targeting.py  test_trust.py
infra/: docker-compose.yml
scripts/: bootstrap.sh  dev.sh  smoke_phase2.py  smoke_phase3.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/consent/: page.tsx
web/src/app/phase-1-stub/: page.tsx
web/src/app/play/: page.tsx
web/src/app/reveal/: page.tsx
web/src/app/reveal-stub/: page.tsx
web/src/app/reveal/levels/: Level1.tsx  Level2.tsx  Level3.tsx  Level4.tsx  Level5.tsx  Level6.tsx  Level7.tsx
web/src/app/reveal/lib/: formatInference.ts
web/src/app/round/choice/: page.tsx
web/src/app/round/dilemma/: page.tsx
web/src/app/round/memory/: page.tsx
web/src/app/round/pursuit/: page.tsx
web/src/app/self-report/: page.tsx
web/src/components/reveal/: LevelShell.tsx
web/src/components/round/: CountdownRing.tsx  Stage.tsx
web/src/lib/: api.ts  eventCapture.ts  schemas.ts  session.ts
(+3 files in other folders)
