[project]
name = "inkling-engine"
version = "0.1.0"
description = "Inkling rule-based scoring engine"
authors = [
    { name = "Will Foti", email = "wfoti71992@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.101.0",
    "numpy>=2.0",
    "pydantic>=2.13.4",
    "scipy>=1.13",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "inkling_engine"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
